compiler/tests/compiler/expected/output/GenericTypeError.shtk.txt
MODULE GenericTypeError.shtk
ERROR in Line 8 Col 9

    a = b
        ^
Type error, did not expect TestModules/Pair.shtk::Pair[float, long], expected TestModules/Pair.shtk::Pair[int, TestModules/Pair.shtk::Pair[int, int]]

GenericTypeError.shtk:8:8
